--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <div id="container"></div>
     <button id="button">increase count</button>
+    <button id="minus">decrease count</button>
     <script src="src/createStore.js"></script>
   </body>
 </html>
